--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -3,6 +3,8 @@
   .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    text-align: center;
+
     .portfolio-link {
       position: relative;
       display: block;
