--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -1,5 +1,5 @@
 // Styling for the portfolio section
-#portfolio {
+#insights {
   .portfolio-item {
     right: 0;
     margin: 0 0 15px;
@@ -67,7 +67,7 @@
 
 
 @media(min-width:767px) {
-  #portfolio {
+  #insights {
     .portfolio-item {
       margin: 0 0 30px;
     }
@@ -100,6 +100,7 @@
       margin-bottom: 30px;
     }
     img {
+      max-width: 400px;
       margin-bottom: 30px;
     }
     button {
