--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -109,7 +109,7 @@
       width:190px;
       text-align: center;
       display: inline-block;
-      border:1px solid;
+      border:1px solid #6c757d;
       padding: 4px 10px 4px 10px;
       border-radius:10px;
       margin: 2px 0px 4px 0px;
@@ -125,16 +125,16 @@
       width:190px;
       text-align: center;
       display: inline-block;
-      border:1px solid;
-      border-color: white;
+      border:1px solid #6c757d;
       padding: 4px 10px 4px 10px;
       border-radius:10px;
       margin: 2px 0px 4px 0px;
-      font-weight: 300;
+      font-weight: 100;
       color: #6c757d;
       &:hover{
-        color: #fed136;
-        font-weight: 900;
+        background-color: #fed136;
+        color: white;
+        border-color: #fed136;
       }
     }
   }
