--- a/css/agency.css
+++ b/css/agency.css
@@ -1064,6 +1064,10 @@ header.masthead .intro-text .intro-heading {
   text-align: center;
 }
 
+.footer a {
+  color: #212529;
+}
+
 .footer span.copyright {
   font-size: 90%;
   line-height: 40px;
