--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,8 @@
 // Styling for the footer
 .footer {
+  a {
+    color: #212529;
+  }
   padding: 25px 0;
   text-align: center;
   span.copyright {
