--- a/css/agency.css
+++ b/css/agency.css
@@ -14,15 +14,15 @@ p {
 }
 
 a {
-  color: #fed136;
+  color: #6ABA9A;
 }
 
 a:hover {
-  color: #fec503;
+  color: #4ca581;
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #6ABA9A !important;
 }
 
 h1,
@@ -61,12 +61,12 @@ h6 {
 }
 
 ::-moz-selection {
-  background: #fed136;
+  background: #6ABA9A;
   text-shadow: none;
 }
 
 ::selection {
-  background: #fed136;
+  background: #6ABA9A;
   text-shadow: none;
 }
 
@@ -93,13 +93,13 @@ img::-moz-selection {
 }
 
 .btn-primary {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #6ABA9A;
+  border-color: #6ABA9A;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  background-color: #50ad88 !important;
+  border-color: #50ad88 !important;
   color: white;
 }
 
@@ -119,17 +119,17 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #fed136;
+  background-color: #6ABA9A;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #fed136;
+  color: #6ABA9A;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #fec503;
+  color: #4ca581;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -142,7 +142,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #6ABA9A;
 }
 
 @media (min-width: 992px) {
@@ -177,7 +177,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header.jpeg");
+  background: url("../img/header.jpeg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -232,9 +232,14 @@ header.masthead .intro-text .intro-heading {
 }
 
 #insights .portfolio-item {
+  padding: 0px 40px 0px 40px;
   right: 0;
   margin: 0 0 15px;
   text-align: center;
+}
+
+#insights .portfolio-item img {
+  opacity: .9;
 }
 
 #insights .portfolio-item .portfolio-link {
@@ -251,7 +256,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(106, 186, 154, 0.9);
 }
 
 #insights .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -340,7 +345,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .portfolio-modal .modal-content img {
-  max-width: 400px;
+  max-width: 300px;
   margin-bottom: 30px;
 }
 
@@ -450,7 +455,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: #6ABA9A;
 }
 
 .timeline > li .timeline-image h4 {
@@ -519,9 +524,9 @@ header.masthead .intro-text .intro-heading {
 }
 
 .timeline .timeline-dates a.date:hover {
-  background-color: #fed136;
+  background-color: #6ABA9A;
   color: white;
-  border-color: #fed136;
+  border-color: #6ABA9A;
 }
 
 .timeline .timeline-dates a.pre-date {
@@ -537,9 +542,9 @@ header.masthead .intro-text .intro-heading {
 }
 
 .timeline .timeline-dates a.pre-date:hover {
-  background-color: #fed136;
+  background-color: #6ABA9A;
   color: white;
-  border-color: #fed136;
+  border-color: #6ABA9A;
 }
 
 @media (min-width: 768px) {
@@ -548,7 +553,7 @@ header.masthead .intro-text .intro-heading {
   }
   .timeline > li {
     min-height: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
   }
   .timeline > li .timeline-panel {
     float: left;
@@ -631,7 +636,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(106, 186, 154, 0.9);
 }
 
 #courses .course-link .course-hover:hover {
@@ -836,7 +841,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(106, 186, 154, 0.9);
 }
 
 #team .team-member .team-link .team-hover:hover {
@@ -1030,7 +1035,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 #contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #6ABA9A;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -1102,7 +1107,7 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #fed136;
+  background-color: #6ABA9A;
 }
 
 pckg {
