--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url('../img/header.jpeg');
+  background: url('../img/header.jpeg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
