--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -30,7 +30,7 @@ pckg {
   border-radius: 4px;
   &:hover {
     color: white;
-    background: #fed136;
+    background: $primary;
     font-weight: 900;
     }
   }
