--- a/css/agency.css
+++ b/css/agency.css
@@ -341,6 +341,10 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+.portfolio-modal .modal-content li {
+  align: left;
+}
+
 .portfolio-modal .modal-content ul.list-inline {
   margin-top: 0;
   margin-bottom: 30px;
@@ -742,9 +746,12 @@ header.masthead .intro-text .intro-heading {
 
 .course-modal .modal-content p.item-intro {
   font-size: 16px;
-  font-style: italic;
-  margin: 20px 0 30px;
-  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  margin: 0px 0 40px;
+}
+
+.course-modal .modal-content ol {
+  padding-left: 20px;
+  text-align: left;
 }
 
 .course-modal .modal-content ul.list-inline {
@@ -773,12 +780,50 @@ header.masthead .intro-text .intro-heading {
 
 .course-modal .modal-content a.pckg:hover {
   color: white;
-  background: #fed136;
+  background: #6ABA9A;
   font-weight: 900;
   decoration: none;
 }
 
+.course-modal .modal-content a.date {
+  width: 190px;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid #6c757d;
+  padding: 4px 10px 4px 10px;
+  border-radius: 10px;
+  margin: 2px 0px 4px 0px;
+  font-weight: 900;
+  color: #6c757d;
+}
+
+.course-modal .modal-content a.date:hover {
+  background-color: #6ABA9A;
+  color: white;
+  border-color: #6ABA9A;
+}
+
+.course-modal .modal-content a.pre-date {
+  width: 190px;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid #6c757d;
+  padding: 4px 10px 4px 10px;
+  border-radius: 10px;
+  margin: 2px 0px 4px 0px;
+  font-weight: 100;
+  color: #6c757d;
+}
+
+.course-modal .modal-content a.pre-date:hover {
+  background-color: #6ABA9A;
+  color: white;
+  border-color: #6ABA9A;
+}
+
 .course-modal .modal-content p.head {
+  text-align: left;
+  font-weight: 900;
   padding-top: 10px;
   margin-top: 10px;
   padding-bottom: 0px;
@@ -786,6 +831,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .course-modal .modal-content p.entry {
+  text-align: left;
   padding-top: 0px;
   margin-top: 0px;
   padding-bottom: 10px;
@@ -795,18 +841,44 @@ header.masthead .intro-text .intro-heading {
 .course-modal .modal-content table {
   display: inline-table;
   border: none;
-  width: 80%;
+  width: 100%;
 }
 
 .course-modal .modal-content table td {
   text-align: left;
   vertical-align: top;
+  padding-bottom: 4px;
 }
 
 .course-modal .modal-content table td.elem {
-  text-align: right;
-  font-weight: 900;
+  width: 20%;
+  text-align: left;
   padding-right: 20px;
+  padding-bottom: 4px;
+}
+
+.course-modal .modal-content table.schedule {
+  display: inline-table;
+  border: none;
+  width: 60%;
+  margin-right: 40%;
+}
+
+.course-modal .modal-content table.schedule td, .course-modal .modal-content table.schedule th {
+  text-align: left;
+  vertical-align: top;
+  padding-bottom: 4px;
+}
+
+.course-modal .modal-content table.schedule th {
+  font-weight: 900;
+}
+
+.course-modal .modal-content table.schedule td.time {
+  width: 130px;
+  text-align: left;
+  padding-right: 20px;
+  padding-bottom: 4px;
 }
 
 .course-modal .modal-content p.pckg {
@@ -1187,7 +1259,7 @@ pckg {
 
 pckg:hover {
   color: white;
-  background: #fed136;
+  background: #6ABA9A;
   font-weight: 900;
 }
 
