--- a/css/agency.css
+++ b/css/agency.css
@@ -515,6 +515,18 @@ header.masthead .intro-text .intro-heading {
   margin-top: 12px;
 }
 
+.timeline > li .material-size {
+  width: 80px;
+  height: 80px;
+}
+
+.timeline > li .mats {
+  margin-left: -7px;
+  font-size: 10px;
+  line-height: 14px;
+  margin-top: 12px;
+}
+
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
   padding: 0 20px 0 100px;
@@ -623,6 +635,16 @@ header.masthead .intro-text .intro-heading {
     line-height: 18px;
     margin-top: 16px;
   }
+  .timeline > li .material-size {
+    width: 100px;
+    height: 100px;
+  }
+  .timeline > li .mats {
+    margin-left: -7px;
+    font-size: 13px;
+    line-height: 18px;
+    margin-top: 16px;
+  }
   .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
     padding: 0 30px 20px 20px;
@@ -647,6 +669,16 @@ header.masthead .intro-text .intro-heading {
     line-height: 26px;
     margin-top: 30px;
   }
+  .timeline > li .material-size {
+    width: 150px;
+    height: 150px;
+  }
+  .timeline > li .mats {
+    margin-left: -7px;
+    font-size: 18px;
+    line-height: 26px;
+    margin-top: 30px;
+  }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 20px 20px;
   }
@@ -666,6 +698,10 @@ header.masthead .intro-text .intro-heading {
   }
   .timeline > li .timeline-image h4 {
     margin-top: 40px;
+  }
+  .timeline > li .material-size {
+    width: 170px;
+    height: 170px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
@@ -725,47 +761,47 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
-.course-modal .modal-dialog {
+.course-modal .modal-dialog, .material-modal .modal-dialog {
   margin: 1rem;
   max-width: 100vw;
 }
 
-.course-modal .modal-content {
+.course-modal .modal-content, .material-modal .modal-content {
   padding: 100px 0;
   text-align: center;
 }
 
-.course-modal .modal-content h2 {
+.course-modal .modal-content h2, .material-modal .modal-content h2 {
   font-size: 3em;
   margin-bottom: 15px;
 }
 
-.course-modal .modal-content p {
+.course-modal .modal-content p, .material-modal .modal-content p {
   margin-bottom: 30px;
 }
 
-.course-modal .modal-content p.item-intro {
+.course-modal .modal-content p.item-intro, .material-modal .modal-content p.item-intro {
   font-size: 16px;
   margin: 0px 0 40px;
 }
 
-.course-modal .modal-content ol {
+.course-modal .modal-content ol, .material-modal .modal-content ol {
   padding-left: 20px;
   text-align: left;
 }
 
-.course-modal .modal-content ul.list-inline {
+.course-modal .modal-content ul.list-inline, .material-modal .modal-content ul.list-inline {
   margin-top: 0;
   margin-bottom: 30px;
 }
 
-.course-modal .modal-content ul.social-buttons li a {
+.course-modal .modal-content ul.social-buttons li a, .material-modal .modal-content ul.social-buttons li a {
   height: 40px;
   width: 40px;
   line-height: 40px;
 }
 
-.course-modal .modal-content a.pckg {
+.course-modal .modal-content a.pckg, .material-modal .modal-content a.pckg {
   color: #6c757d;
   decoration: none;
   padding: .2rem .5rem;
@@ -778,14 +814,14 @@ header.masthead .intro-text .intro-heading {
   border-radius: 4px;
 }
 
-.course-modal .modal-content a.pckg:hover {
+.course-modal .modal-content a.pckg:hover, .material-modal .modal-content a.pckg:hover {
   color: white;
   background: #6ABA9A;
   font-weight: 900;
   decoration: none;
 }
 
-.course-modal .modal-content a.date {
+.course-modal .modal-content a.date, .material-modal .modal-content a.date {
   width: 190px;
   text-align: center;
   display: inline-block;
@@ -797,13 +833,13 @@ header.masthead .intro-text .intro-heading {
   color: #6c757d;
 }
 
-.course-modal .modal-content a.date:hover {
+.course-modal .modal-content a.date:hover, .material-modal .modal-content a.date:hover {
   background-color: #6ABA9A;
   color: white;
   border-color: #6ABA9A;
 }
 
-.course-modal .modal-content a.pre-date {
+.course-modal .modal-content a.pre-date, .material-modal .modal-content a.pre-date {
   width: 190px;
   text-align: center;
   display: inline-block;
@@ -815,13 +851,13 @@ header.masthead .intro-text .intro-heading {
   color: #6c757d;
 }
 
-.course-modal .modal-content a.pre-date:hover {
+.course-modal .modal-content a.pre-date:hover, .material-modal .modal-content a.pre-date:hover {
   background-color: #6ABA9A;
   color: white;
   border-color: #6ABA9A;
 }
 
-.course-modal .modal-content p.head {
+.course-modal .modal-content p.head, .material-modal .modal-content p.head {
   text-align: left;
   font-weight: 900;
   padding-top: 10px;
@@ -830,7 +866,7 @@ header.masthead .intro-text .intro-heading {
   margin-bottom: 0px;
 }
 
-.course-modal .modal-content p.entry {
+.course-modal .modal-content p.entry, .material-modal .modal-content p.entry {
   text-align: left;
   padding-top: 0px;
   margin-top: 0px;
@@ -838,57 +874,56 @@ header.masthead .intro-text .intro-heading {
   margin-bottom: 10px;
 }
 
-.course-modal .modal-content table {
+.course-modal .modal-content table, .material-modal .modal-content table {
   display: inline-table;
   border: none;
   width: 100%;
 }
 
-.course-modal .modal-content table td {
+.course-modal .modal-content table td, .material-modal .modal-content table td {
   text-align: left;
   vertical-align: top;
   padding-bottom: 4px;
 }
 
-.course-modal .modal-content table td.elem {
+.course-modal .modal-content table td.elem, .material-modal .modal-content table td.elem {
   width: 20%;
   text-align: left;
   padding-right: 20px;
   padding-bottom: 4px;
 }
 
-.course-modal .modal-content table.schedule {
+.course-modal .modal-content table.schedule, .material-modal .modal-content table.schedule {
   display: inline-table;
   border: none;
-  width: 60%;
-  margin-right: 40%;
+  width: 100%;
+  padding-right: 40%;
 }
 
-.course-modal .modal-content table.schedule td, .course-modal .modal-content table.schedule th {
+.course-modal .modal-content table.schedule td, .course-modal .modal-content table.schedule th, .material-modal .modal-content table.schedule td, .material-modal .modal-content table.schedule th {
   text-align: left;
   vertical-align: top;
   padding-bottom: 4px;
 }
 
-.course-modal .modal-content table.schedule th {
+.course-modal .modal-content table.schedule th, .material-modal .modal-content table.schedule th {
   font-weight: 900;
 }
 
-.course-modal .modal-content table.schedule td.time {
-  width: 130px;
+.course-modal .modal-content table.schedule td.time, .material-modal .modal-content table.schedule td.time {
   text-align: left;
   padding-right: 20px;
   padding-bottom: 4px;
 }
 
-.course-modal .modal-content p.pckg {
+.course-modal .modal-content p.pckg, .material-modal .modal-content p.pckg {
   padding-top: 0px;
   margin-top: 0px;
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
 
-.course-modal .modal-content img {
+.course-modal .modal-content img, .material-modal .modal-content img {
   margin-bottom: 30px;
   width: 225px;
   height: 225px;
@@ -896,12 +931,12 @@ header.masthead .intro-text .intro-heading {
   border-radius: 50%;
 }
 
-.course-modal .modal-content button {
+.course-modal .modal-content button, .material-modal .modal-content button {
   margin-top: 30px;
   cursor: pointer;
 }
 
-.course-modal .close-modal {
+.course-modal .close-modal, .material-modal .close-modal {
   position: absolute;
   top: 25px;
   right: 25px;
@@ -911,11 +946,11 @@ header.masthead .intro-text .intro-heading {
   background-color: transparent;
 }
 
-.course-modal .close-modal:hover {
+.course-modal .close-modal:hover, .material-modal .close-modal:hover {
   opacity: 0.3;
 }
 
-.course-modal .close-modal .lr {
+.course-modal .close-modal .lr, .material-modal .close-modal .lr {
   /* Safari and Chrome */
   z-index: 1051;
   width: 1px;
@@ -927,7 +962,7 @@ header.masthead .intro-text .intro-heading {
   background-color: #212529;
 }
 
-.course-modal .close-modal .lr .rl {
+.course-modal .close-modal .lr .rl, .material-modal .close-modal .lr .rl {
   /* Safari and Chrome */
   z-index: 1052;
   width: 1px;
@@ -936,6 +971,64 @@ header.masthead .intro-text .intro-heading {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
   background-color: #212529;
+}
+
+li.timeline-inverted .material-link {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  color: white;
+}
+
+li.timeline-inverted .material-link .material-hover {
+  margin-left: -7px;
+  border-radius: 50%;
+  position: absolute;
+  border: 7px solid rgba(0, 0, 0, 0.02);
+  -webkit-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+  opacity: 0;
+  background: rgba(106, 186, 154, 0.9);
+}
+
+li.timeline-inverted .material-link .material-hover:hover {
+  opacity: .8;
+}
+
+li.timeline-inverted .material-link .material-hover .material-hover-content {
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  margin-top: 0px;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  margin-top: -12px;
+}
+
+li.timeline-inverted .material-link .material-hover .material-hover-content i {
+  margin-top: -12px;
+}
+
+li.timeline-inverted .material-link .material-hover .material-hover-content h3,
+li.timeline-inverted .material-link .material-hover .material-hover-content h4 {
+  position: relative;
+  height: 100%;
+  color: #6ABA9A;
+  margin: 0;
+}
+
+li.timeline-inverted .material-link p {
+  color: #6ABA9A;
+  height: 100%;
+  width: 100%;
+}
+
+li.timeline-inverted * {
+  z-index: 2;
 }
 
 #team .team-member {
