--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -62,6 +62,17 @@
         margin-top: 12px;
       }
     }
+    .material-size {
+      width: 80px;
+      height: 80px;
+    }
+    .mats {
+      //margin-top: -7px;
+      margin-left: -7px;
+      font-size: 10px;
+      line-height: 14px;
+      margin-top: 12px;
+    }
     &.timeline-inverted > .timeline-panel {
       float: right;
       padding: 0 20px 0 100px;
@@ -164,6 +175,17 @@
           margin-top: 16px;
         }
       }
+      .material-size {
+        width: 100px;
+        height: 100px;
+      }
+      .mats {
+        //margin-top: -7px;
+        margin-left: -7px;
+        font-size: 13px;
+        line-height: 18px;
+        margin-top: 16px;
+      }
       &.timeline-inverted > .timeline-panel {
         float: right;
         padding: 0 30px 20px 20px;
@@ -189,6 +211,17 @@
           margin-top: 30px;
         }
       }
+      .material-size {
+        width: 150px;
+        height: 150px;
+      }
+      .mats {
+        //margin-top: -7px;
+        margin-left: -7px;
+        font-size: 18px;
+        line-height: 26px;
+        margin-top: 30px;
+      }
       &.timeline-inverted > .timeline-panel {
         padding: 0 20px 20px;
       }
@@ -210,6 +243,11 @@
           margin-top: 40px;
         }
       }
+      .material-size {
+        width: 170px;
+        height: 170px;
+      }
+
       &.timeline-inverted > .timeline-panel {
         padding: 0 100px 20px 20px;
       }
@@ -272,7 +310,7 @@
   }
 }
 
-.course-modal {
+.course-modal, .material-modal {
   .modal-dialog {
     margin: 1rem;
     max-width: 100vw;
@@ -391,8 +429,8 @@
     table.schedule {
       display: inline-table;
       border: none;
-      width: 60%;
-      margin-right: 40%;
+      width: 100%;
+      padding-right: 40%;
       td, th {
         text-align: left;
         vertical-align: top;
@@ -402,7 +440,6 @@
         font-weight: 900;
       }
       td.time {
-        width: 130px;
         text-align: left;
         padding-right: 20px;
         padding-bottom: 4px;
@@ -460,5 +497,63 @@
         background-color: $gray-900;
       }
     }
+  }
+}
+
+
+
+// Styling for the team section
+li.timeline-inverted {
+    .material-link {
+      position: relative;
+      display: block;
+      margin: 0 auto;
+      cursor: pointer;
+      color: white;
+      .material-hover {
+        margin-left: -7px;
+        border-radius: 50%;
+        position: absolute;
+        border: 7px solid fade-out($black, 0.98);
+        -webkit-transition: all ease 0.5s;
+        -moz-transition: all ease 0.5s;
+        transition: all ease 0.5s;
+        opacity: 0;
+        background: fade-out($primary, .1);
+        &:hover {
+          opacity: .8;
+        }
+        .material-hover-content {
+          font-size: 20px;
+          position: absolute;
+          top: 50%;
+          width: 100%;
+          height: 100%;
+          margin-top: 0px;
+          text-align: center;
+          vertical-align: middle;
+          color: white;
+          margin-top: -12px;
+          i {
+            margin-top: -12px;
+          }
+          h3,
+          h4 {
+            position: relative;
+            height: 100%;
+            color: $primary;
+            margin: 0;
+          }
+        }
+      }
+      p {
+        color: $primary;
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+  * {
+    z-index: 2;
   }
 }
