--- a/css/agency.css
+++ b/css/agency.css
@@ -521,10 +521,15 @@ header.masthead .intro-text .intro-heading {
 }
 
 .timeline > li .mats {
-  margin-left: -7px;
+  font-weight: 500;
+  font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
   font-size: 10px;
   line-height: 14px;
-  margin-top: 12px;
+  padding-top: 16px;
+}
+
+.timeline > li .plus {
+  font-size: 10px;
 }
 
 .timeline > li.timeline-inverted > .timeline-panel {
@@ -640,10 +645,14 @@ header.masthead .intro-text .intro-heading {
     height: 100px;
   }
   .timeline > li .mats {
-    margin-left: -7px;
+    font-weight: 500;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
     font-size: 13px;
     line-height: 18px;
-    margin-top: 16px;
+    padding-top: 20px;
+  }
+  .timeline > li .plus {
+    font-size: 13px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
@@ -674,10 +683,14 @@ header.masthead .intro-text .intro-heading {
     height: 150px;
   }
   .timeline > li .mats {
-    margin-left: -7px;
+    font-weight: 500;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
     font-size: 18px;
     line-height: 26px;
-    margin-top: 30px;
+    padding-top: 30px;
+  }
+  .timeline > li .plus {
+    font-size: 18px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 20px 20px;
@@ -702,6 +715,16 @@ header.masthead .intro-text .intro-heading {
   .timeline > li .material-size {
     width: 170px;
     height: 170px;
+  }
+  .timeline > li .mats {
+    font-weight: 500;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+    padding-top: 38px;
+    font-size: 1.5rem;
+    line-height: 1.2;
+  }
+  .timeline > li .plus {
+    font-size: 1.5rem;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
@@ -993,7 +1016,7 @@ li.timeline-inverted .material-link .material-hover {
 }
 
 li.timeline-inverted .material-link .material-hover:hover {
-  opacity: .8;
+  opacity: .85;
 }
 
 li.timeline-inverted .material-link .material-hover .material-hover-content {
