--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -67,11 +67,14 @@
       height: 80px;
     }
     .mats {
-      //margin-top: -7px;
-      margin-left: -7px;
+      font-weight: 500;
+      font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
       font-size: 10px;
       line-height: 14px;
-      margin-top: 12px;
+      padding-top: 16px;
+    }
+    .plus{
+      font-size: 10px;
     }
     &.timeline-inverted > .timeline-panel {
       float: right;
@@ -180,11 +183,14 @@
         height: 100px;
       }
       .mats {
-        //margin-top: -7px;
-        margin-left: -7px;
+        font-weight: 500;
+        font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
         font-size: 13px;
         line-height: 18px;
-        margin-top: 16px;
+        padding-top: 20px;
+      }
+      .plus{
+        font-size: 13px;
       }
       &.timeline-inverted > .timeline-panel {
         float: right;
@@ -216,11 +222,14 @@
         height: 150px;
       }
       .mats {
-        //margin-top: -7px;
-        margin-left: -7px;
+        font-weight: 500;
+        font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
         font-size: 18px;
         line-height: 26px;
-        margin-top: 30px;
+        padding-top: 30px;
+      }
+      .plus{
+        font-size: 18px;
       }
       &.timeline-inverted > .timeline-panel {
         padding: 0 20px 20px;
@@ -247,7 +256,16 @@
         width: 170px;
         height: 170px;
       }
-
+      .mats {
+        font-weight: 500;
+        font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+        padding-top: 38px;
+        font-size: 1.5rem;
+        line-height: 1.2;
+      }
+      .plus{
+        font-size: 1.5rem;
+      }
       &.timeline-inverted > .timeline-panel {
         padding: 0 100px 20px 20px;
       }
@@ -521,7 +539,7 @@ li.timeline-inverted {
         opacity: 0;
         background: fade-out($primary, .1);
         &:hover {
-          opacity: .8;
+          opacity: .85;
         }
         .material-hover-content {
           font-size: 20px;
@@ -535,6 +553,7 @@ li.timeline-inverted {
           color: white;
           margin-top: -12px;
           i {
+            //font-size: 2rem;
             margin-top: -12px;
           }
           h3,
