--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -576,3 +576,21 @@ li.timeline-inverted {
     z-index: 2;
   }
 }
+
+
+a.arxiv {
+  width:190px;
+  text-align: center;
+  display: inline-block;
+  border:1px solid #6c757d;
+  padding: 4px 10px 4px 10px;
+  border-radius:10px;
+  margin: 2px 0px 4px 0px;
+  font-weight: 900;
+  color: #6c757d;
+  &:hover{
+    background-color: $primary;
+    color: white;
+    border-color: $primary;
+  }
+}
