--- a/css/agency.css
+++ b/css/agency.css
@@ -371,7 +371,7 @@ header.masthead .intro-text .intro-heading {
 
 .portfolio-modal .modal-content a.pckg:hover {
   color: white;
-  background: #fed136;
+  background: #6ABA9A;
   font-weight: 900;
   decoration: none;
 }
