--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -122,7 +122,7 @@
       border-radius: 4px;
       &:hover {
         color: white;
-        background: #fed136;
+        background: $primary;
         font-weight: 900;
         decoration: none;
       }
