--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -8,6 +8,24 @@
     img {
       opacity: .9;
     }
+    a.pckg{
+      color:#6c757d;
+      decoration: none;
+      padding: .2rem .5rem;
+      margin: 0 .2rem;
+      font-size: 90%;
+      white-space: nowrap;
+      font-family: monospace;
+      background: #F1F1F1;
+      font-weight: 900;
+      border-radius: 4px;
+      &:hover {
+        color: white;
+        background: $primary;
+        font-weight: 900;
+        decoration: none;
+        }
+    }
     .portfolio-link {
       position: relative;
       display: block;
@@ -141,6 +159,22 @@
       margin-top:0px;
       padding-bottom:10px;
       margin-bottom:10px;
+    }
+    p.code{
+      text-align: left;
+      padding-top:0px;
+      margin-top:0px;
+      padding-bottom:10px;
+      margin-bottom:10px;
+      background-color: $gray-100;
+      font-family: monospace;
+      color: #6c757d;
+      white-space: pre;
+    }
+    code-inline {
+      font-family: monospace;
+      color: #6c757d;
+      background-color: $gray-100;
     }
     p.pckg{
       padding-top:0px;
