--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -171,6 +171,11 @@
       color: #6c757d;
       white-space: pre;
     }
+    p.code_img{
+      text-align: left;
+      padding-left: 10px;
+      margin-bottom: 0px;
+    }
     code-inline {
       font-family: monospace;
       color: #6c757d;
