--- a/css/agency.css
+++ b/css/agency.css
@@ -234,7 +234,8 @@ header.masthead .intro-text .intro-heading {
 }
 
 #insights .portfolio-item {
-  padding: 0px 40px 0px 40px;
+  bottom: -40px;
+  padding: 0px 40px 40px 40px;
   right: 0;
   margin: 0 0 15px;
   text-align: center;
@@ -343,6 +344,10 @@ header.masthead .intro-text .intro-heading {
 .portfolio-modal .modal-content {
   padding: 100px 0;
   text-align: center;
+}
+
+.portfolio-modal .modal-content a {
+  font-weight: 700;
 }
 
 .portfolio-modal .modal-content h2 {
