--- a/css/agency.css
+++ b/css/agency.css
@@ -1057,6 +1057,10 @@ li.timeline-inverted .material-link {
   color: white;
 }
 
+li.timeline-inverted .material-link .no-underline:hover {
+  text-decoration: none;
+}
+
 li.timeline-inverted .material-link .material-hover {
   margin-left: -7px;
   border-radius: 50%;
@@ -1385,6 +1389,26 @@ a.arxiv:hover {
   font-weight: 700;
   color: #ced4da;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+#contact input[type=checkbox] {
+  /* Double-sized Checkboxes */
+  /* IE */
+  /* FF */
+  -webkit-transform: scale(1.2);
+  /* Safari and Chrome */
+  /* Opera */
+  transform: scale(1.2);
+  height: 20px;
+  width: 20px;
+  vertical-align: middle;
+}
+
+#contact font.checkbox {
+  color: white;
+  font-size: 1.2em;
+  font-weight: 700;
+  font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
 }
 
 .footer {
