--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -45,4 +45,25 @@
     @include heading-font;
   }
 
+  input[type=checkbox] {
+
+    /* Double-sized Checkboxes */
+    -ms-transform: scale(1.2); /* IE */
+    -moz-transform: scale(1.2); /* FF */
+    -webkit-transform: scale(1.2); /* Safari and Chrome */
+    -o-transform: scale(1.2); /* Opera */
+    transform: scale(1.2);
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+
+  }
+
+  font.checkbox {
+    color: white;
+    font-size: 1.2em;
+    font-weight: 700;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+  }
+
 }
