--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -103,6 +103,7 @@
   .modal-content {
     a {
       font-weight: 700;
+      data-dismiss: "modal";
     }
     padding: 100px 0;
     text-align: center;
