--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -20,6 +20,7 @@
       background: #F1F1F1;
       font-weight: 900;
       border-radius: 4px;
+      target: "_blank";
       &:hover {
         color: white;
         background: $primary;
