--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -378,6 +378,7 @@
       background: #F1F1F1;
       font-weight: 900;
       border-radius: 4px;
+      target: "_blank";
       &:hover {
         color: white;
         background: $primary;
@@ -431,6 +432,11 @@
       margin-top:0px;
       padding-bottom:10px;
       margin-bottom:10px;
+    }
+    code-inline {
+      font-family: monospace;
+      color: #6c757d;
+      background-color: $gray-100;
     }
     table {
       display: inline-table;
@@ -597,6 +603,7 @@ a.arxiv {
   margin: 2px 0px 4px 0px;
   font-weight: 900;
   color: #6c757d;
+  target: "_blank";
   &:hover{
     background-color: $primary;
     color: white;
