--- a/css/landing.css
+++ b/css/landing.css
@@ -18,13 +18,13 @@
   color: white;
   border-left: 1px solid white;
   border-radius: 0px;
-  width: 140px;
+  width: 100px;
   height: 52px;
-  padding: 14px 8px 8px 30px;
+  padding: 14px 8px 8px 20px;
   }
 
 .unibas-tag {
-  width: 160px;
+  width: 120px;
   height: 60px;
   padding: 6px 0px 6px 0px;
   }
@@ -60,6 +60,17 @@
   .usp {
     font-size: 1.4rem;
     padding-left: 0px;
+    }
+  .webinar-tag {
+    width: 140px;
+    height: 52px;
+    padding: 14px 8px 8px 30px;
+    }
+
+  .unibas-tag {
+    width: 160px;
+    height: 60px;
+    padding: 6px 0px 6px 0px;
     }
   }
 @media (min-width: 768px){
