--- a/css/landing.css
+++ b/css/landing.css
@@ -129,14 +129,16 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   font-weight:500;
-  font-size: 1.4rem;
+  font-size: 1rem;
   }
 
 .fa-stack {
   font-size: 2.4em;
   }
 
-@media (min-width: 576px){}
+@media (min-width: 576px){
+  .icon {font-size: 1.4rem;}
+}
 @media (min-width: 768px){
   .icon-row {padding-bottom: 20px;}
   .icon {font-size: 1.4rem;}
