--- a/css/landing.css
+++ b/css/landing.css
@@ -264,7 +264,7 @@ iframe{
   margin-left:0px;
   }
 .concepts li {
-  font-size: 1.4rem;
+  font-size: 1rem;
   padding: 0px 0px;
   }
 
@@ -279,7 +279,7 @@ iframe{
     font-size: 0rem;
     text-indent: 1.4rem;
     transform:rotate(45deg);
-    margin:0px 10px;
+    margin:0px 8px;
     line-height: 1.2rem;
     white-space: nowrap;
 
@@ -293,7 +293,11 @@ li.active {
     font-size:1.2rem;
 }
 
-@media (min-width: 576px){}
+@media (min-width: 576px){
+  .concepts li {
+    font-size: 1.4rem;
+    }
+}
 @media (min-width: 768px){
   #myCarousel, #myCarousel2  {height: 670px}
   }
