--- a/css/landing.css
+++ b/css/landing.css
@@ -133,11 +133,14 @@
   }
 
 .fa-stack {
-  font-size: 2.4em;
+  font-size: 2em;
   }
 
 @media (min-width: 576px){
   .icon {font-size: 1.4rem;}
+  .fa-stack {
+    font-size: 2.4em;
+    }
 }
 @media (min-width: 768px){
   .icon-row {padding-bottom: 20px;}
