--- a/css/landing.css
+++ b/css/landing.css
@@ -46,12 +46,12 @@
   font-weight:100;
   padding-bottom: 10px;
   overflow-wrap: normal;
-  padding-left:18px;
+  padding-left:16px;
   }
 
 .bullet {
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   }
 
 
@@ -66,11 +66,14 @@
     height: 52px;
     padding: 14px 8px 8px 30px;
     }
-
   .unibas-tag {
     width: 160px;
     height: 60px;
     padding: 6px 0px 6px 0px;
+    }
+  .bullet {
+    width: 40px;
+    height: 40px;
     }
   }
 @media (min-width: 768px){
